    right shifts on signed integers.
28. Fixed violations of the C standard in several identifiers.
29. Renamed the 8-bit register lists: X/Y to J/K; J/K and P/Q to O/P.
30. Replaced all P/V overflow computation functions with a single, faster macro.
31. Replaced all register resolution functions with macros.
32. Replaced all `ld {J,K|O,P}` instructions that have the same destination and
    source register with NOPs.
33. Reimplemented the HALT state. The emulation should now be fully accurate.
    HALTskip is also supported.
34. Renamed the `z80_reset` function to `z80_instant_reset`.
35. Added optional emulation of the special RESET, along with the new
    `z80_special_reset` function.
36. Added the `Z80::fetch_opcode` and `Z80::fetch` callbacks for performing
    opcode fetch operations and memory read operations on instruction data
    respectively.
37. Added the `Z80::nop` callback for performing disregarded opcode fetch
    operations during internal NOP M-cycles.
38. Added emulation of the NMI acknowledge M-cycle through the new `Z80::nmia`
    callback.
39. Added emulation of the INT acknowledge M-cycle through the new `Z80::inta`
    callback, which replaces `Z80::int_data`.
40. Added optional full emulation of the interrupt mode 0, along with the new
    `Z80::int_fetch` callback for performing bus read operations on instruction
    data. If not enabled at compile-time, the old simplified emulation is built,
    which supports only the most typical instructions.
41. Added four callbacks for notifying the execution of important instructions:
    `Z80::ld_i_a`, `Z80::ld_r_a`, `Z80::reti` and `Z80::retn`.
42. Added hooking functionality through the `ld h,h` instruction and the new
    `Z80::hook` callback.
43. Added the `Z80::illegal` callback for delegating the emulation of illegal
    instructions.
44. Added accurate flag behavior in the following instructions: `ldir`, `lddr`,
    `cpir`, `cpdr`, `inir`, `indr`, `otir` and `otdr`.